# redshift-etl-automation-with-dbt

./: pyproject.toml
cloudformation_files/: etl_automation.yaml
src/: Dockerfile
src/dbt-project/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
src/dbt-project/models/staging/provider_data/: src_provider_data.yml  stg_mswo.sql
