[tool.poetry]
name = "redshift-etl-automation-with-dbt"
version = "0.1.0"
description = ""
authors = ["Alex Wohletz <alex.wohletz@phtech.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dbt = "^0.21.0"
dbt-athena = {git = "https://github.com/Tomme/dbt-athena.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
